fix: fix with pixel perfect

--- a/Coffee house/index.html
+++ b/Coffee house/index.html
@@ -15,7 +15,7 @@
     <header id="header">
       <div class="container">
         <div class="header__menu">
-          <a href="index.html" class="header__menu-logo" target="_blank">
+          <a href="index.html" class="header__menu-logo">
             <img src="./src/assets/img/home/header/logo.png" alt="logo" />
           </a>
           <a class="burger" href="#popup">
@@ -42,7 +42,7 @@
             <a
               href="menu.html#coffee"
               class="coffee__menu-link"
-              target="_blank"
+            
             >
               <span class="coffee__menu-title">Menu</span>
               <img
@@ -54,7 +54,7 @@
 
           <div class="popup" id="popup">
             <div class="popup__header">
-              <a href="index.html" class="header__menu-logo" target="_blank">
+              <a href="index.html" class="header__menu-logo">
                 <img src="./src/assets/img/home/header/logo.png" alt="logo" />
               </a>
               <a class="burger burger_close" href="#header">
@@ -111,7 +111,7 @@
               <a
                 href="menu.html#coffee"
                 class="intro__block-btn"
-                target="_blank"
+              
               >
                 <span>Menu</span>
                 <img
