--- a/Coffee house/menu.html
+++ b/Coffee house/menu.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./src/assets/sass/pages/menu.scss" />
+        <link rel="stylesheet" href="./src/assets/sass/pages/menu.scss" />
     <link rel="icon" href="./src/assets/img/favicon.png" style="width: 32px" />
     <title>Menu</title>
   </head>
@@ -104,7 +104,7 @@
               Behind each of our cups hides <span>an amazing surprise</span>
             </h1>
             <div class="offer__tabs">
-              <a class="offer__btn active" href="#coffee">
+              <a class="offer__btn" href="#coffee">
                 <div class="offer__btn-img">
                   <img src="./src/assets/img/menu/offer/1.svg" alt="coffee" />
                 </div>
@@ -450,7 +450,7 @@
                   <a
                     href="https://www.google.com/maps/place/JW+Marriott+Los+Angeles+L.A.+LIVE/@34.0422334,-118.2657936,13.33z/data=!4m18!1m8!3m7!1s0x80c2c75ddc27da13:0xe22fdf6f254608f4!2z0JvQvtGBLdCQ0L3QtNC20LXQu9C10YEsINCa0LDQu9C40YTQvtGA0L3QuNGPLCDQodCo0JA!3b1!8m2!3d34.0549076!4d-118.242643!16s%2Fm%2F030qb3t!3m8!1s0x80c2c7b97afee08f:0x6eb7594db5ec0692!5m2!4m1!1i2!8m2!3d34.0452408!4d-118.2664713!16s%2Fm%2F0mxn2d5?entry=ttu"
                     class="contact-link"
-                    target="_blank"
+                   
                     ><img
                       src="./src/assets/img/home/footer/contact-1.svg"
                       alt="contact"
@@ -468,13 +468,13 @@
                   </a>
                 </li>
                 <li class="contacts__list-item">
-                  <a href="#" class="contact-link"
+                  <span class="contact-link contact-link-span"
                     ><img
                       src="./src/assets/img/home/footer/contact-3.svg"
                       alt="contact"
-                    />
+                    >
                     <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
-                  </a>
+                  </span>
                 </li>
               </ul>
             </div>
