fix: fix contact link in footer

--- a/Coffee house/index.html
+++ b/Coffee house/index.html
@@ -395,13 +395,13 @@
                   </a>
                 </li>
                 <li class="contacts__list-item">
-                  <a href="#" class="contact-link"
+                  <span class="contact-link contact-link-span"
                     ><img
                       src="./src/assets/img/home/footer/contact-3.svg"
                       alt="contact"
-                    />
+                    >
                     <span>Mon-Sat: 9:00 AM – 23:00 PM</span>
-                  </a>
+                  </span>
                 </li>
               </ul>
             </div>
